--- a/viikko3/nhlreader/build.gradle
+++ b/viikko3/nhlreader/build.gradle
@@ -11,6 +11,15 @@ application {
 }
 
 */
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile group: 'org.apache.httpcomponents', name: 'fluent-hc', version: '4.5.13'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+}
+
 
 jar {
     manifest {
